Fix hover images hiding behind the player hand

--- a/src/routes/game/components/elements/cardPortal/CardPortal.module.css
+++ b/src/routes/game/components/elements/cardPortal/CardPortal.module.css
@@ -19,7 +19,7 @@
 }
 
 .img {
-  height: 50vh;
+  height: 45vh;
   display: block;
   max-width: 100%;
   max-height: 100%;
